fix alignment issue of feature groups

--- a/src/components/features.css
+++ b/src/components/features.css
@@ -40,7 +40,7 @@ h2, h3 {
 
 .featuresGroup {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
 }
 
 .feature {
